--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -21,6 +21,32 @@
   </div>
 </div>
 
+<div>
+  <h3 class="my-width mx-auto">Parameters (grouping, resizing)</h3>
+  <form [formGroup]="paramsForm">
+    <div class="form-group my-width mx-auto">
+      <label for="timeDiffDuplicate">Time diff for duplicates (in sec)</label><br />
+      <input class="form-control" id="timeDiffDuplicate" type="text" formControlName="timeDiffDuplicate"
+        (blur)="updateTimeDiffDuplicate()" />
+    </div>
+    <div class="form-group my-width mx-auto">
+      <label for="timeDiffGroup">Time diff for groups (in sec)</label><br />
+      <input class="form-control" id="timeDiffGroup" type="text" formControlName="timeDiffGroup"
+        (blur)="updateTimeDiffGroup()" />
+    </div>
+    <div class="form-group my-width mx-auto">
+      <label for="resizeWidth">Resize width (px)</label><br />
+      <input class="form-control" id="resizeWidth" type="text" formControlName="resizeWidth"
+        (blur)="updateResizeWidth()" />
+    </div>
+    <div class="form-group my-width mx-auto">
+      <label for="resizeHeight">Resize height (px)</label><br />
+      <input class="form-control" id="resizeHeight" type="text" formControlName="resizeHeight"
+        (blur)="updateResizeHeight()" />
+    </div>
+  </form>
+</div>
+
 <form [formGroup]="inputFilesForm">
   <div class="form-group my-width mx-auto">
     <label for="inputFiles">Select images for grouping</label>
@@ -34,14 +60,14 @@
     <p class="card-text text-danger" *ngIf="mediaItems.length != filesCount">Resizing in progress
       ({{ mediaItems.length }} of {{ filesCount }})</p>
     <p class="card-text text-primary" *ngIf="mediaItems.length == filesCount">Finished: {{ mediaItems.length }} files
-      resized to {{ resizeWidth }}x{{ resizeHeight }}px.</p>
+      resized to {{ resizeWidthUsed }}x{{ resizeHeightUsed }}px.</p>
   </div>
 </div>
 
 <div *ngIf="filesLoaded">
   <div class="card p-3 mb-2 bg-light text-dark my-width mx-auto">
     <div class="card-body">
-      <button class="btn btn-primary mb-2" (click)="createGroups()" [disabled]="groupsCreated">
+      <button class="btn btn-primary mb-2" (click)="createGroups()">
         Create groups
       </button>
       <p class="card-text" *ngIf="getUniqueMediaItemsCount()">
@@ -63,8 +89,8 @@
         <div *ngIf="group.show">
           <button (click)="changeLargePreview(group)"
             class="btn btn-secondary mb-2">{{ group.largePreview ? 'Small preview' : 'Large preview' }}</button>
-          <button (click)="changeShowOnlyDuplicates(group)"
-            class="btn btn-secondary mb-2" *ngIf="(group.mediaItemsForGrouping.length - group.getCountWithoutDuplicates()) > 0 || group.showOnlyDuplicates">
+          <button (click)="changeShowOnlyDuplicates(group)" class="btn btn-secondary mb-2"
+            *ngIf="(group.mediaItemsForGrouping.length - group.getCountWithoutDuplicates()) > 0 || group.showOnlyDuplicates">
             {{ group.showOnlyDuplicates ? 'Hide duplicates' : 'Show ' + (group.mediaItemsForGrouping.length - group.getCountWithoutDuplicates()) + ' duplicates' }}
           </button>
         </div>
@@ -130,7 +156,8 @@
       </p>
       <p class="card-text text-danger" *ngIf="uploadingStatus == 'InProgress'">UPLOADING IN PROGRESS</p>
       <p class="card-text text-primary" *ngIf="uploadingStatus == 'Success'">UPLOADING SUCCESSFULLY FINISHED</p>
-      <p class="card-text text-danger" *ngIf="uploadingStatus == 'Fail'">UPLOADING FAILED (see the Groups Overview table for details)</p>
+      <p class="card-text text-danger" *ngIf="uploadingStatus == 'Fail'">UPLOADING FAILED (see the Groups Overview table
+        for details)</p>
     </div>
   </div>
 </div>
