parameters form adjusted

--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -26,23 +26,19 @@
   <form [formGroup]="paramsForm">
     <div class="form-group my-width mx-auto">
       <label for="timeDiffDuplicate">Time diff for duplicates (in sec)</label><br />
-      <input class="form-control" id="timeDiffDuplicate" type="text" formControlName="timeDiffDuplicate"
-        (blur)="updateTimeDiffDuplicate()" />
+      <input class="form-control" id="timeDiffDuplicate" type="text" formControlName="timeDiffDuplicate"/>
     </div>
     <div class="form-group my-width mx-auto">
       <label for="timeDiffGroup">Time diff for groups (in sec)</label><br />
-      <input class="form-control" id="timeDiffGroup" type="text" formControlName="timeDiffGroup"
-        (blur)="updateTimeDiffGroup()" />
+      <input class="form-control" id="timeDiffGroup" type="text" formControlName="timeDiffGroup"/>
     </div>
     <div class="form-group my-width mx-auto">
       <label for="resizeWidth">Resize width (px)</label><br />
-      <input class="form-control" id="resizeWidth" type="text" formControlName="resizeWidth"
-        (blur)="updateResizeWidth()" />
+      <input class="form-control" id="resizeWidth" type="text" formControlName="resizeWidth"/>
     </div>
     <div class="form-group my-width mx-auto">
       <label for="resizeHeight">Resize height (px)</label><br />
-      <input class="form-control" id="resizeHeight" type="text" formControlName="resizeHeight"
-        (blur)="updateResizeHeight()" />
+      <input class="form-control" id="resizeHeight" type="text" formControlName="resizeHeight"/>
     </div>
   </form>
 </div>
