resize params test added

--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -56,7 +56,7 @@
     <p class="card-text text-danger" *ngIf="mediaItems.length != filesCount">Resizing in progress
       ({{ mediaItems.length }} of {{ filesCount }})</p>
     <p class="card-text text-primary" *ngIf="mediaItems.length == filesCount">Finished: {{ mediaItems.length }} files
-      resized to {{ resizeWidthUsed }}x{{ resizeHeightUsed }}px.</p>
+      resized to {{ resizeWidth }}x{{ resizeHeight }}px.</p>
   </div>
 </div>
 
