--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -11,14 +11,19 @@
   max-width: 200px;
 }
 
-.carousel-width {
-  max-width: 400px;
-}
-
 .my-width {
   max-width: 900px
 }
 
 .my-width-groups {
   max-width: 900px
+}
+
+.carousel-div {
+  margin: auto;
+  max-width: 500px;
+}
+
+.carousel-img {
+  max-width: 500px;
 }
