--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,4 +1,4 @@
-<h2 class="my-width mx-auto">Grouping and resizing images for uploading to Google Photos</h2>
+<h2 class="my-width mx-auto mb-2 p-3">Grouping and resizing images for uploading to Google Photos</h2>
 
 <div *ngIf="!user" class="card text-center">
   <div class="card-block">
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div class="my-width mx-auto">
+<div class="my-width mx-auto mb-2 p-3">
   <h3>Parameters (grouping, resizing)</h3>
   <form [formGroup]="paramsForm" class="form-inline">
     <div class="form-group my-width mx-auto">
@@ -62,7 +62,7 @@
 </div>
 
 <form [formGroup]="inputFilesForm" *ngIf="paramsForm.status == 'VALID'">
-  <div class="form-group my-width mx-auto">
+  <div class="form-group my-width mx-auto mb-2 p-3">
     <label for="inputFiles">Select images for grouping</label>
     <input class="form-control" id="inputFiles" #file type="file" accept="image/*" (change)="processFiles(file.files)"
       multiple />
@@ -93,9 +93,9 @@
 </div>
 
 <div *ngIf="getUniqueMediaItemsCount()">
-  <h3 class="my-width mx-auto">Images in groups</h3>
+  <h3 class="my-width mx-auto mb-2 p-3">Images in groups</h3>
 
-  <div class="my-width-groups mx-auto">
+  <div class="my-width-groups mx-auto mb-2 p-3">
     <div *ngFor="let group of mediaItemsGroups" class="card border p-3 mb-2">
       <!-- group header -->
       <div class="card-header">
@@ -161,7 +161,7 @@
 </div>
 
 <div *ngIf="mediaItemsGroups.length">
-  <h3 class="my-width mx-auto">Groups overview</h3>
+  <h3 class="my-width mx-auto mb-2 p-3">Groups overview</h3>
 
   <table class="table table-bordered my-width mx-auto p-3 mb-2">
     <th>Group</th>
@@ -188,7 +188,7 @@
     </tr>
   </table>
 
-  <h3 class="my-width mx-auto">Upload to Google Photos</h3>
+  <h3 class="my-width mx-auto mb-2 p-3">Upload to Google Photos</h3>
 
   <div class="card p-3 mb-2 bg-light text-dark my-width mx-auto">
     <div class="card-body">
