--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -22,32 +22,43 @@
 </div>
 
 <div class="my-width mx-auto mb-2 p-3">
-  <h3>Parameters (grouping, resizing)</h3>
-  <form [formGroup]="paramsForm" class="form-inline">
-    <div class="form-group my-width mx-auto">
-      <label for="timeDiffDuplicate">Time diff for duplicates (in sec)</label>
-      <input class="form-control" id="timeDiffDuplicate" type="text" formControlName="timeDiffDuplicate" />
+  <h3>Parameters (grouping, resizing)
+    <button (click)="changeParamsFormShow()" class="btn btn-primary m-2">
+    {{ paramsFormShow ? 'Hide' : 'Show' }}
+  </button></h3>
+  <form [formGroup]="paramsForm" *ngIf="paramsFormShow">
+    <div class="form-group row">
+      <label for="timeDiffDuplicate" class="col-sm col-form-label">Time diff for duplicates (in sec)</label>
+      <div class="col-sm">
+        <input class="form-control" id="timeDiffDuplicate" type="text" formControlName="timeDiffDuplicate" />
+      </div>
       <div class="card-text text-danger" *ngIf="paramsForm.get(['timeDiffDuplicate']).errors">
         Time diff for duplicates (in sec) must be between 1 and 3600.
       </div>
     </div>
-    <div class="form-group my-width mx-auto">
-      <label for="timeDiffGroup">Time diff for groups (in sec)</label>
-      <input class="form-control" id="timeDiffGroup" type="text" formControlName="timeDiffGroup" />
+    <div class="form-group row">
+      <label for="timeDiffGroup" class="col-sm col-form-label">Time diff for groups (in sec)</label>
+      <div class="col-sm">
+        <input class="form-control" id="timeDiffGroup" type="text" formControlName="timeDiffGroup" />
+      </div>
       <div class="card-text text-danger" *ngIf="paramsForm.get(['timeDiffGroup']).errors">
         Time diff for groups (in sec) must be between 60 and 86400.
       </div>
     </div>
-    <div class="form-group my-width mx-auto">
-      <label for="resizeWidth">Resize width (px)</label>
-      <input class="form-control" id="resizeWidth" type="text" formControlName="resizeWidth" />
+    <div class="form-group row">
+      <label for="resizeWidth" class="col-sm col-form-label">Resize width (px)</label>
+      <div class="col-sm">
+        <input class="form-control" id="resizeWidth" type="text" formControlName="resizeWidth" />
+      </div>
       <div class="card-text text-danger" *ngIf="paramsForm.get(['resizeWidth']).errors">
         Resize width (px) must be between 1 and 10000.
       </div>
     </div>
-    <div class="form-group my-width mx-auto">
-      <label for="resizeHeight">Resize height (px)</label>
-      <input class="form-control" id="resizeHeight" type="text" formControlName="resizeHeight" />
+    <div class="form-group row">
+      <label for="resizeHeight" class="col-sm col-form-label">Resize height (px)</label>
+      <div class="col-sm">
+        <input class="form-control" id="resizeHeight" type="text" formControlName="resizeHeight" />
+      </div>
       <div class="card-text text-danger" *ngIf="paramsForm.get(['resizeHeight']).errors">
         Resize height (px) must be between 1 and 10000.
       </div>
@@ -69,49 +80,37 @@
   </div>
 </form>
 
-<div class="card p-3 mb-2 text-dark my-width mx-auto" *ngIf="filesCount">
+<div class="card p-3 mb-2 bg-light text-dark my-width mx-auto" *ngIf="filesCount">
   <div class="card-body">
     <p class="card-text text-danger" *ngIf="mediaItems.length != filesCount">Resizing in progress
       ({{ mediaItems.length }} of {{ filesCount }})</p>
     <p class="card-text text-primary" *ngIf="mediaItems.length == filesCount">Finished: {{ mediaItems.length }} files
       resized to {{ resizeWidth }}x{{ resizeHeight }}px.</p>
-  </div>
-</div>
-
-<div *ngIf="filesLoaded">
-  <div class="card p-3 mb-2 bg-light text-dark my-width mx-auto">
-    <div class="card-body">
+    <div *ngIf="filesLoaded">
       <button class="btn btn-primary mb-2" (click)="createGroups()">
         Create groups
       </button>
-      <p class="card-text" *ngIf="getUniqueMediaItemsCount()">
-        {{ getUniqueMediaItemsCount() }} files without duplicates in
-        {{ mediaItemsGroups.length }} groups
+      <p class="card-text" *ngIf="getMediaItemsCount()">
+        {{ getMediaItemsCount() }} images in {{ mediaItemsGroups.length }} groups
       </p>
     </div>
   </div>
 </div>
 
-<div *ngIf="getUniqueMediaItemsCount()">
+<div *ngIf="getMediaItemsCount()">
   <h3 class="my-width mx-auto mb-2 p-3">Images in groups</h3>
 
   <div class="my-width-groups mx-auto mb-2 p-3">
     <div *ngFor="let group of mediaItemsGroups" class="card border p-3 mb-2">
       <!-- group header -->
-      <div class="card-header">
-        <button (click)="changeShowGroup(group)"
-          class="btn btn-primary mb-2">{{ group.show ? 'Hide images' : 'Show images' }}</button><br />
-        <div *ngIf="group.show">
-          <button (click)="changeLargePreview(group)"
-            class="btn btn-secondary mb-2">{{ group.largePreview ? 'Small preview' : 'Large preview' }}</button>
-          <button (click)="changeShowOnlyDuplicates(group)" class="btn btn-secondary mb-2"
-            *ngIf="(group.mediaItemsForGrouping.length - group.getCountWithoutDuplicates()) > 0 || group.showOnlyDuplicates">
-            {{ group.showOnlyDuplicates ? 'Hide duplicates' : 'Show ' + (group.mediaItemsForGrouping.length - group.getCountWithoutDuplicates()) + ' duplicates' }}
-          </button>
-        </div>
-        <h5 #groupName contenteditable (blur)="updateGroupName(group, groupName.textContent)">{{ group.name }}</h5>
-        <div>{{ group.getCountWithoutDuplicates() }} unique files (of {{ group.mediaItemsForGrouping.length }})</div>
-        <button (click)="removeGroup(group)" class="btn btn-primary mb-2" *ngIf="group.show">Remove group</button>
+      <div class="card-header mb-2 p-3">
+        <button (click)="changeShowGroup(group)" class="btn btn-primary m-2">
+          {{ group.show ? 'Hide ' : 'Show ' }} {{ group.mediaItemsForGrouping.length }} images
+        </button>
+        <button *ngIf="group.show" (click)="changeLargePreview(group)"
+            class="btn btn-secondary m-2">{{ group.largePreview ? 'Small preview' : 'Large preview' }}</button>
+        <span class="font-weight-bold" #groupName contenteditable (blur)="updateGroupName(group, groupName.textContent)">{{ group.name }}</span>
+        <button (click)="removeGroup(group)" class="btn btn-primary m-2" *ngIf="group.show">Remove group</button>
       </div>
 
       <!-- group images -->
@@ -121,12 +120,10 @@
         <div class="card-body group" *ngIf="group.show">
           <div *ngFor="let item of group.mediaItemsForGrouping">
 
-            <div class="file p-3 mb-2"
-              *ngIf="(group.showOnlyDuplicates && item.isDuplicate == 'Y') || (!group.showOnlyDuplicates && item.isDuplicate == 'N')">
+            <div class="file p-3 mb-2">
               {{ item.mediaItem.dateTime | date: "HH:mm:ss" }}<br />
               <img class='small-img' [src]="item.mediaItem.contentUrl" /><br />
-              <button (click)="changeIsDuplicate(group, item)" class="btn btn-primary mb-2">
-                {{ item.isDuplicate === "Y" ? "Add" : "Remove" }}</button>
+              <button (click)="removeItemFromGroup(group, item)" class="btn btn-primary mb-2">Remove</button>
               <div>
                 {{ item.mediaItem.uploadSuccess ? "Uploaded" : "Not uploaded" }}
               </div>
@@ -141,12 +138,9 @@
         <ngb-carousel *ngIf="group.show" data-interval="false">
             <ng-template ngbSlide *ngFor="let item of group.mediaItemsForGrouping">
               <div class="carousel-caption">
-                <h5>{{ item.mediaItem.dateTime | date: "HH:mm:ss" }}</h5>
-                <button (click)="changeIsDuplicate(group, item)" class="btn btn-primary mb-2">
-                  {{ item.isDuplicate === "Y" ? "Add" : "Remove" }}</button>
-                <div>
-                  {{ item.mediaItem.uploadSuccess ? "Uploaded" : "Not uploaded" }}
-                </div>
+                <span class="bg-light text-primary m-2 p-2">{{ item.mediaItem.dateTime | date: "HH:mm:ss" }}
+                ({{ item.mediaItem.uploadSuccess ? "Uploaded" : "Not uploaded" }})</span>
+                <button (click)="removeItemFromGroup(group, item)" class="btn btn-primary mb-2">Remove</button>
               </div>
               <div class="picsum-img-wrapper">
                 <img [src]="item.mediaItem.contentUrl" class="carousel-img">
@@ -174,17 +168,17 @@
       <td>{{ group.name }}</td>
       <td>{{ getDaysDiffFromToday(group.startTime) }}</td>
       <td>{{ group.albumId ? 'CREATED' : 'not created' }}</td>
-      <td>{{ group.getCountWithoutDuplicates() }}</td>
+      <td>{{ group.mediaItemsForGrouping.length }}</td>
       <td>{{ group.getUploadedCount() }}</td>
-      <td>{{ group.getCountWithoutDuplicates() - group.getUploadedCount() }}</td>
+      <td>{{ group.mediaItemsForGrouping.length - group.getUploadedCount() }}</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
       <td></td>
-      <td>{{ getUniqueMediaItemsCount() }}</td>
+      <td>{{ getMediaItemsCount() }}</td>
       <td>{{ getUploadedCount() }}</td>
-      <td>{{ getUniqueMediaItemsCount() - getUploadedCount() }}</td>
+      <td>{{ getMediaItemsCount() - getUploadedCount() }}</td>
     </tr>
   </table>
 
