image max height + responsive

--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -143,7 +143,7 @@
                 <button (click)="removeItemFromGroup(group, item)" class="btn btn-primary mb-2">Remove</button>
               </div>
               <div class="picsum-img-wrapper">
-                <img [src]="item.mediaItem.contentUrl" class="carousel-img">
+                <img [src]="item.mediaItem.contentUrl" class="carousel-img d-block w-100">
               </div>
             </ng-template>
         </ngb-carousel>
